# final-project-swatikadivar

./: .gitignore  README.md  SocketClient.c  Steps-to-add-new-meta-layer-on-Yocto-image.md  Steps-to-setup-Yocto-env-on-RPi.md  build.sh  makefile  socketserver  socketserver-start-stop  socketserver.c
meta-gpio/conf/: layer.conf
meta-gpio/recipes-gpio/gpio/: gpio_1.0.bb
meta-socketserver/conf/: layer.conf
meta-socketserver/recipes-socketserver/server/: socketserver_1.0.bb
poky_customized/bitbake/lib/bb/pysh/: pyshtables.py
poky_customized/meta-openembedded/: README
poky_customized/meta-openembedded/conf/: layer.conf
poky_customized/meta-selftest/conf/: layer.conf
poky_customized/meta-skeleton/conf/: layer.conf
poky_customized/meta-yocto-bsp/conf/: layer.conf
poky_customized/meta/recipes-connectivity/wpa-supplicant/wpa-supplicant/: wpa_supplicant.conf-sane
poky_customized/meta/recipes-core/initscripts/: initscripts-1.0.bb  initscripts_1.0.bb
poky_customized/meta/recipes-core/initscripts/initscripts-1.0/: setup-wifi.sh  start-wifi.sh
socketserver/: Makefile.am  configure.ac  socketserver-start-stop  socketserver.c
